# database-backup-cli-client-py

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  ruff.toml
src/cli/: prompts.py
src/commands/: backup.py  restore.py
src/db/: mongo.py  postgres.py
src/utils/: spawn.py
